--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,9 +1,8 @@
 @import 'root';
 @import 'navbar';
-@import 'home';
 @import 'about';
 @import 'projects';
-@import 'contact';
+@import 'timeline';
 @import 'footer';
 
 
