--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -1,5 +1,5 @@
 .ftr{
-    border: 1px solid $black;
+    border: 0.052vw solid $black;
     height:1.563vw;
     border-radius: $radius;
     display: flex;
