--- a/src/styles/_about.scss
+++ b/src/styles/_about.scss
@@ -5,85 +5,75 @@
         "title title"
         "aboutme skills";
     h1{
-        font-size: 6.667vw;
-        line-height: 6.667vw;
-        font-weight: 400;
-        margin-bottom: 1.615vw;
-        margin-top: 0.573vw;
-        font-family: $Opensans;
+        margin-bottom: 31.008px;
+        margin-top: 11.002px;
     }
-    h2{
-        font-size: 1.667vw;
-        line-height: 2.083vw;
-        font-family: $Opensans;
-        margin-bottom: 1.562vw;
-    }
-    p{
-        font-size: 1.25vw;
-        line-height: 2.083vw;
-        font-family: $Roboto;
-        margin-bottom: 1.042vw;
-        &:last-child{
-            margin-bottom: 0;
-        }
-    }
+    // h2{
+    //     font-size: 32.006px;
+    //     line-height: 39.994px;
+    //     font-family: $Opensans;
+    //     margin-bottom: 29.99px;
+    // }
+    // p{
+    //     font-size: 24px;
+    //     line-height: 39.994px;
+    //     font-family: $Roboto;
+    //     margin-bottom: 20.006px;
+    //     &:last-child{
+    //         margin-bottom: 0;
+    //     }
+    // }
     .abt-a{
         background-color: $greengrey;
         border-radius: $radius;
-        margin-top: 1.458vw;
+        margin-top: 27.994px;
         color: $white;
         display: flex;
-        padding: 1.771vw 3.229vw 2.396vw 2.865vw;
+        padding: 34.003px 61.997px 46.003px 55.008px;
         justify-content: space-between;
-        margin-bottom: 1.562vw;
+        margin-bottom: 29.99px;
         grid-area: title;
         button{
-            font-size: 1.667vw;
-            line-height: 1.667vw;
-            padding: 1.094vw 2.292vw;
+            font-size: 32.006px;
+            line-height: 32.006px;
+            padding: 21.005px 44.006px;
             border-radius: $radius;
-            border:0.156vw solid $white;
+            border:2.995px solid $white;
             background-color: transparent;
             color: $white;
             font-family: $Opensans;
         }
         .tl-img{
             img{
-                width: 13.021vw;
-                height: 13.021vw;
+                width: 250.003px;
+                height: 250.003px;
             }
         }
     }
     .abt-b{
-        width: 48.698vw;
-        min-width: 48.698vw;
-        height: 26.562vw;
-        min-height: 26.562vw;
+        width: 935.002px;
+        min-width: 935.002px;
+        height: 509.99px;
+        min-height: 509.99px;
         border-radius: $radius;
         background-color: $black;
         color: $white;
-        padding: 3.125vw 2.708vw;
-        margin-right: 1.563vw;
+        padding: 60px 51.994px;
+        margin-right: 30.01px;
         grid-area: aboutme;
     }
     .abt-c{
-        width: 48.698vw;
-        min-width: 48.698vw;
-        height: 26.562vw;
-        min-height: 26.562vw;
+        width: 935.002px;
+        min-width: 935.002px;
+        height: 509.99px;
+        min-height: 509.99px;
         border-radius: $radius;
         background-color: $neon;
-        padding: 3.125vw 2.708vw;
+        padding: 60px 51.994px;
         grid-area: skills;
         button{
-            border:0.052vw solid $black;
-            background-color: transparent;
-            border-radius: $radius;
-            font-size: 1.667vw;
-            line-height: 1.667vw;
-            padding: 0.521vw 1.719vw;
-            margin-right: 0.781vw;
-            margin-bottom: 0.781vw;
+            margin-right: 14.995px;
+            margin-bottom: 14.995px;
         }
     }
 }
