--- a/src/styles/_root.scss
+++ b/src/styles/_root.scss
@@ -42,6 +42,68 @@ body{
     background-color: $white;
 }
 
+h1{
+    font-size: 128px;
+    line-height: 128px;
+}
+h2{
+    font-size: 40px;
+    line-height: 54px;
+    margin-bottom: 30px;
+}
+h3{
+    font-size: 40px;
+    line-height: 64px;
+}
+p{
+    font-size: 24px;
+    line-height: 40px;
+    font-family: $Roboto;
+    margin-bottom: 20px;
+    &:last-child{
+        margin-bottom: 0;
+    }
+}
+.btns{
+    font-size: 32px;
+    line-height: 32px;
+    padding: 8.5px 33px;
+    background: none;
+    border-radius: $radius;
+    border:1px solid $black;
+}
+.btntl{
+    font-size: 24px;
+    line-height: 32px;
+    padding: 8.5px 33px;
+    background: none;
+    border-radius: $radius;
+    border:3px solid $black;
+}
+.ls-c{
+    .ls{
+        width: 47px;
+        height: 47px;
+    }
+}
+
+ul{
+    margin: 0;
+    padding: 0;
+    li{
+        font-size: 24px;
+        line-height: 33px;
+        margin-bottom: 20px;
+        &:last-child{
+            margin-bottom: 0;
+        }
+        &::marker{
+            content: '';
+        }
+    }
+}
+
+
 @media screen and (max-width: 1280px) {
     body{
         padding: 0.781vw;
@@ -49,7 +111,15 @@ body{
 
 }
 
-@media screen and (max-width: 414px) {
+
+@media screen and (max-width: 1024px) {
+    body{
+        padding: 0.976vw;
+    }
+
+}
+
+@media screen and (max-width: 480px) {
     body{
         padding: 2.415vw;
     }
