--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -5,12 +5,82 @@ body {
   background-color: #fff;
 }
 
+h1 {
+  font-size: 128px;
+  line-height: 128px;
+}
+
+h2 {
+  font-size: 40px;
+  line-height: 54px;
+  margin-bottom: 30px;
+}
+
+h3 {
+  font-size: 40px;
+  line-height: 64px;
+}
+
+p {
+  font-size: 24px;
+  line-height: 40px;
+  font-family: "Roboto", sans-serif;
+  margin-bottom: 20px;
+}
+p:last-child {
+  margin-bottom: 0;
+}
+
+.btns {
+  font-size: 32px;
+  line-height: 32px;
+  padding: 8.5px 33px;
+  background: none;
+  border-radius: 2.604vw;
+  border: 1px solid #000000;
+}
+
+.btntl {
+  font-size: 24px;
+  line-height: 32px;
+  padding: 8.5px 33px;
+  background: none;
+  border-radius: 2.604vw;
+  border: 3px solid #000000;
+}
+
+.ls-c .ls {
+  width: 47px;
+  height: 47px;
+}
+
+ul {
+  margin: 0;
+  padding: 0;
+}
+ul li {
+  font-size: 24px;
+  line-height: 33px;
+  margin-bottom: 20px;
+}
+ul li:last-child {
+  margin-bottom: 0;
+}
+ul li::marker {
+  content: "";
+}
+
 @media screen and (max-width: 1280px) {
   body {
     padding: 0.781vw;
   }
 }
-@media screen and (max-width: 414px) {
+@media screen and (max-width: 1024px) {
+  body {
+    padding: 0.976vw;
+  }
+}
+@media screen and (max-width: 480px) {
   body {
     padding: 2.415vw;
   }
@@ -350,7 +420,7 @@ body {
     --transition: $black ease .3s, top ease .3s .3s, transform ease .3s;
     --mborderw-m: 0.097vw;
     --mborders-m: solid;
-    --mborderc-m: $black;
+    --mborderc-m: $black
     border-width: var(--mborderw-m);
     border-style: var(--mborders-m);
     border-color: var(--mborderc-m);
@@ -446,8 +516,6 @@ body {
     justify-content: space-between;
     margin: 0;
     margin-top: 0.976vw;
-    width: 384px;
-    height: 50px;
   }
   .nvgtn-m .nvc .nvc-item {
     width: 30.078vw;
@@ -551,7 +619,7 @@ body {
     transition: top ease 0.3s, transform ease 0.3s 0.3s;
   }
 }
-@media screen and (max-width: 414px) {
+@media screen and (max-width: 460px) {
   .nvgtn {
     display: none;
   }
@@ -768,84 +836,59 @@ body {
   grid-template-areas: "title title" "aboutme skills";
 }
 .abt h1 {
-  font-size: 6.667vw;
-  line-height: 6.667vw;
-  font-weight: 400;
-  margin-bottom: 1.615vw;
-  margin-top: 0.573vw;
-  font-family: "Open Sans", sans-serif;
-}
-.abt h2 {
-  font-size: 1.667vw;
-  line-height: 2.083vw;
-  font-family: "Open Sans", sans-serif;
-  margin-bottom: 1.562vw;
-}
-.abt p {
-  font-size: 1.25vw;
-  line-height: 2.083vw;
-  font-family: "Roboto", sans-serif;
-  margin-bottom: 1.042vw;
-}
-.abt p:last-child {
-  margin-bottom: 0;
+  margin-bottom: 31.008px;
+  margin-top: 11.002px;
 }
 .abt .abt-a {
   background-color: #839292;
   border-radius: 2.604vw;
-  margin-top: 1.458vw;
+  margin-top: 27.994px;
   color: #fff;
   display: flex;
-  padding: 1.771vw 3.229vw 2.396vw 2.865vw;
+  padding: 34.003px 61.997px 46.003px 55.008px;
   justify-content: space-between;
-  margin-bottom: 1.562vw;
+  margin-bottom: 29.99px;
   grid-area: title;
 }
 .abt .abt-a button {
-  font-size: 1.667vw;
-  line-height: 1.667vw;
-  padding: 1.094vw 2.292vw;
+  font-size: 32.006px;
+  line-height: 32.006px;
+  padding: 21.005px 44.006px;
   border-radius: 2.604vw;
-  border: 0.156vw solid #fff;
+  border: 2.995px solid #fff;
   background-color: transparent;
   color: #fff;
   font-family: "Open Sans", sans-serif;
 }
 .abt .abt-a .tl-img img {
-  width: 13.021vw;
-  height: 13.021vw;
+  width: 250.003px;
+  height: 250.003px;
 }
 .abt .abt-b {
-  width: 48.698vw;
-  min-width: 48.698vw;
-  height: 26.562vw;
-  min-height: 26.562vw;
+  width: 935.002px;
+  min-width: 935.002px;
+  height: 509.99px;
+  min-height: 509.99px;
   border-radius: 2.604vw;
   background-color: #000000;
   color: #fff;
-  padding: 3.125vw 2.708vw;
-  margin-right: 1.563vw;
+  padding: 60px 51.994px;
+  margin-right: 30.01px;
   grid-area: aboutme;
 }
 .abt .abt-c {
-  width: 48.698vw;
-  min-width: 48.698vw;
-  height: 26.562vw;
-  min-height: 26.562vw;
+  width: 935.002px;
+  min-width: 935.002px;
+  height: 509.99px;
+  min-height: 509.99px;
   border-radius: 2.604vw;
   background-color: #C3DA37;
-  padding: 3.125vw 2.708vw;
+  padding: 60px 51.994px;
   grid-area: skills;
 }
 .abt .abt-c button {
-  border: 0.052vw solid #000000;
-  background-color: transparent;
-  border-radius: 2.604vw;
-  font-size: 1.667vw;
-  line-height: 1.667vw;
-  padding: 0.521vw 1.719vw;
-  margin-right: 0.781vw;
-  margin-bottom: 0.781vw;
+  margin-right: 14.995px;
+  margin-bottom: 14.995px;
 }
 
 @media screen and (max-width: 1280px) {
@@ -1126,31 +1169,12 @@ body {
   padding: 2.604vw 2.587vw 2.552vw;
 }
 .pjts button {
-  font-size: 1.667vw;
-  line-height: 1.667vw;
-  padding: 0.391vw 1.719vw;
-  background: transparent;
-  border: 0.156vw solid #fff;
-  border-radius: 2.604vw;
+  border-color: #fff;
   color: #fff;
 }
-.pjts .link-c .link {
-  width: 2.448vw;
-  height: 2.448vw;
-}
-.pjts h1 {
-  font-size: 2.5vw;
-  line-height: 3.333vw;
-  margin-top: 1.302vw;
-  margin-bottom: 0.99vw;
-}
-.pjts p {
-  font-size: 1.25vw;
-  line-height: 2.083vw;
-  margin-bottom: 0.99vw;
-}
-.pjts p:last-child {
-  margin-bottom: 0;
+.pjts h3 {
+  margin-top: 24.998px;
+  margin-bottom: 19.008px;
 }
 .pjts .gtn {
   background-color: #9A82C2;
@@ -1719,8 +1743,328 @@ body {
     height: 477.5px;
   }
 }
+.ipt {
+  display: grid;
+  grid-template-areas: "ttc ttc" "ov tg";
+  margin-top: 30px;
+}
+.ipt .tt-c {
+  padding: 55px 73px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border-radius: 2.604vw;
+  grid-area: ttc;
+  margin-bottom: 30px;
+}
+.ipt .tt-c h1 {
+  font-size: 128px;
+  line-height: 128px;
+}
+.ipt .tt-c .bt-c {
+  display: flex;
+  flex-direction: column;
+}
+.ipt .tt-c .bt-c button {
+  font-size: 32px;
+  line-height: 32px;
+  border-width: 3px;
+  border-style: solid;
+  padding: 24px 42px;
+  margin-bottom: 24px;
+  border-radius: 2.604vw;
+  background: none;
+}
+.ipt .tt-c .bt-c button:last-child {
+  margin-bottom: 0;
+}
+.ipt .tt-c .bt-c a {
+  text-decoration: none;
+}
+.ipt h2 {
+  font-size: 40px;
+  line-height: 54px;
+  margin-bottom: 30px;
+}
+.ipt p {
+  font-size: 24px;
+  line-height: 40px;
+  margin-bottom: 20px;
+}
+.ipt p:last-child {
+  margin-bottom: 0;
+}
+.ipt .ov {
+  padding: 60px 65px;
+  border-radius: 2.604vw;
+  width: 1246.67px;
+  height: 510.01px;
+  grid-area: ov;
+  margin-right: 30px;
+}
+.ipt .tg {
+  padding: 60px 50px;
+  border-radius: 2.604vw;
+  width: 623.33px;
+  height: 510px;
+  grid-area: tg;
+}
+.ipt .tg button {
+  font-size: 32px;
+  line-height: 32px;
+  padding: 9px 25px;
+  background: none;
+  border-width: 1px;
+  border-style: solid;
+  border-radius: 2.604vw;
+  margin-right: 15px;
+  margin-bottom: 15px;
+}
+
+@media screen and (max-width: 1280px) {
+  .ipt {
+    display: grid;
+    grid-template-areas: "ttc ttc" "ov tg";
+    margin-top: 30px;
+  }
+  .ipt .tt-c {
+    padding: 98px 45px 98px 45px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-radius: 3.906vw;
+    grid-area: ttc;
+    margin-bottom: 30px;
+  }
+  .ipt .tt-c h1 {
+    font-size: 96px;
+    line-height: 131px;
+  }
+  .ipt .tt-c .bt-c {
+    display: flex;
+    flex-direction: column;
+  }
+  .ipt .tt-c .bt-c button {
+    font-size: 24px;
+    line-height: 24px;
+    border-width: 3px;
+    border-style: solid;
+    padding: 18px 36px;
+    margin-bottom: 34px;
+    border-radius: 3.906vw;
+    background: none;
+  }
+  .ipt .tt-c .bt-c button:last-child {
+    margin-bottom: 0;
+  }
+  .ipt .tt-c .bt-c a {
+    text-decoration: none;
+  }
+  .ipt h2 {
+    font-size: 32px;
+    line-height: 42px;
+    margin-bottom: 30px;
+  }
+  .ipt p {
+    font-size: 20px;
+    line-height: 32px;
+    margin-bottom: 20px;
+  }
+  .ipt p:last-child {
+    margin-bottom: 0;
+  }
+  .ipt .ov {
+    padding: 49px 45.5px;
+    border-radius: 3.906vw;
+    width: 615px;
+    height: 510px;
+    grid-area: ov;
+    margin-right: 30px;
+  }
+  .ipt .tg {
+    padding: 49px 45.5px;
+    border-radius: 3.906vw;
+    width: 615px;
+    height: 510px;
+    grid-area: tg;
+  }
+  .ipt .tg button {
+    font-size: 24px;
+    line-height: 33px;
+    padding: 3px 30px;
+    background: none;
+    border-width: 1px;
+    border-style: solid;
+    border-radius: 2.604vw;
+    margin-right: 15px;
+    margin-bottom: 15px;
+  }
+}
+@media screen and (max-width: 1024px) {
+  .ipt {
+    display: grid;
+    grid-template-areas: "ttc ttc" "ov tg";
+    margin-top: 30px;
+  }
+  .ipt .tt-c {
+    padding: 160px 49px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-radius: 4.883vw;
+    grid-area: ttc;
+    margin-bottom: 30px;
+  }
+  .ipt .tt-c h1 {
+    font-size: 64px;
+    line-height: 87px;
+  }
+  .ipt .tt-c .bt-c {
+    display: flex;
+    flex-direction: column;
+  }
+  .ipt .tt-c .bt-c button {
+    font-size: 24px;
+    line-height: 32px;
+    border-width: 3px;
+    border-style: solid;
+    padding: 14px 28px;
+    margin-bottom: 30px;
+    border-radius: 4.883vw;
+    background: none;
+  }
+  .ipt .tt-c .bt-c button:last-child {
+    margin-bottom: 0;
+  }
+  .ipt .tt-c .bt-c a {
+    text-decoration: none;
+  }
+  .ipt h2 {
+    font-size: 32px;
+    line-height: 42px;
+    margin-bottom: 30px;
+  }
+  .ipt p {
+    font-size: 19px;
+    line-height: 28px;
+    margin-bottom: 20px;
+  }
+  .ipt p:last-child {
+    margin-bottom: 0;
+  }
+  .ipt .ov {
+    padding: 55px 49px;
+    border-radius: 4.883vw;
+    width: 492px;
+    height: 675.6px;
+    grid-area: ov;
+    margin-right: 30px;
+  }
+  .ipt .tg {
+    padding: 49px 55px;
+    border-radius: 4.883vw;
+    width: 492px;
+    height: 675.6px;
+    grid-area: tg;
+  }
+  .ipt .tg button {
+    font-size: 24px;
+    line-height: 32px;
+    padding: 3px 30px;
+    background: none;
+    border-width: 1px;
+    border-style: solid;
+    border-radius: 4.883vw;
+    margin-right: 15px;
+    margin-bottom: 15px;
+  }
+}
+@media screen and (max-width: 480px) {
+  .ipt {
+    display: grid;
+    grid-template-areas: "ttc" "ov" "tg";
+    margin-top: 4.831vw;
+  }
+  .ipt .tt-c {
+    padding: 9.662vw 5.193vw;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: column;
+    border-radius: 4.883vw;
+    grid-area: ttc;
+    margin-bottom: 2.415vw;
+  }
+  .ipt .tt-c h1 {
+    font-size: 8.696vw;
+    line-height: 11.836vw;
+    margin-bottom: 3.623vw;
+  }
+  .ipt .tt-c .bt-c {
+    display: flex;
+    flex-direction: unset;
+  }
+  .ipt .tt-c .bt-c button {
+    font-size: 4.831vw;
+    line-height: 6.522vw;
+    border-width: 0.725vw;
+    border-style: solid;
+    padding: 1.449vw 7.246vw;
+    margin-bottom: 0vw;
+    margin-right: 4.831vw;
+    border-radius: 4.883vw;
+    background: none;
+  }
+  .ipt .tt-c .bt-c button:last-child {
+    margin-bottom: 0;
+    margin-right: 0;
+  }
+  .ipt .tt-c .bt-c a {
+    text-decoration: none;
+  }
+  .ipt h2 {
+    font-size: 4.831vw;
+    line-height: 6.522vw;
+    margin-bottom: 2.415vw;
+  }
+  .ipt p {
+    font-size: 3.865vw;
+    line-height: 5.797vw;
+    margin-bottom: 2.415vw;
+  }
+  .ipt p:last-child {
+    margin-bottom: 0;
+  }
+  .ipt .ov {
+    padding: 9.662vw 6.763vw;
+    border-radius: 25px;
+    width: unset;
+    height: unset;
+    grid-area: ov;
+    margin-right: 0vw;
+    margin-bottom: 2.415vw;
+  }
+  .ipt .tg {
+    padding: 9.662vw 6.763vw;
+    border-radius: 25px;
+    width: unset;
+    height: unset;
+    grid-area: tg;
+  }
+  .ipt .tg button {
+    font-size: 3.865vw;
+    line-height: 5.797vw;
+    padding: 0.725vw 3.623vw;
+    background: none;
+    border-width: 0.242vw;
+    border-style: solid;
+    border-radius: 12.077vw;
+    margin-right: 3.623vw;
+    margin-bottom: 3.623vw;
+  }
+}
 .ftr {
-  border: 1px solid #000000;
+  border: 0.052vw solid #000000;
   height: 1.563vw;
   border-radius: 2.604vw;
   display: flex;
