--- a/src/styles/_about.scss
+++ b/src/styles/_about.scss
@@ -5,20 +5,20 @@
         "title title"
         "aboutme skills";
     h1{
-        margin-bottom: 31.008px;
-        margin-top: 11.002px;
+        margin-bottom: 1.615vw;
+        margin-top: 0.573vw;
     }
     // h2{
-    //     font-size: 32.006px;
-    //     line-height: 39.994px;
+    //     font-size: 1.667vw;
+    //     line-height: 2.083vw;
     //     font-family: $Opensans;
-    //     margin-bottom: 29.99px;
+    //     margin-bottom: 1.562vw;
     // }
     // p{
-    //     font-size: 24px;
-    //     line-height: 39.994px;
+    //     font-size: 1.25vw;
+    //     line-height: 2.083vw;
     //     font-family: $Roboto;
-    //     margin-bottom: 20.006px;
+    //     margin-bottom: 1.042vw;
     //     &:last-child{
     //         margin-bottom: 0;
     //     }
@@ -26,54 +26,54 @@
     .abt-a{
         background-color: $greengrey;
         border-radius: $radius;
-        margin-top: 27.994px;
+        margin-top: 1.563vw;
         color: $white;
         display: flex;
-        padding: 34.003px 61.997px 46.003px 55.008px;
+        padding: 1.771vw 3.229vw 2.396vw 2.865vw;
         justify-content: space-between;
-        margin-bottom: 29.99px;
+        margin-bottom: 1.562vw;
         grid-area: title;
         button{
-            font-size: 32.006px;
-            line-height: 32.006px;
-            padding: 21.005px 44.006px;
+            font-size: 1.667vw;
+            line-height: 1.667vw;
+            padding: 1.094vw 2.292vw;
             border-radius: $radius;
-            border:2.995px solid $white;
+            border:0.156vw solid $white;
             background-color: transparent;
             color: $white;
             font-family: $Opensans;
         }
         .tl-img{
             img{
-                width: 250.003px;
-                height: 250.003px;
+                width: 13.021vw;
+                height: 13.021vw;
             }
         }
     }
     .abt-b{
-        width: 935.002px;
-        min-width: 935.002px;
-        height: 509.99px;
-        min-height: 509.99px;
+        width: 48.698vw;
+        height: 26.562vw;
+        min-height: 26.562vw;
         border-radius: $radius;
         background-color: $black;
         color: $white;
-        padding: 60px 51.994px;
-        margin-right: 30.01px;
+        padding: 3.125vw 2.708vw;
+        margin-right: 1.563vw;
         grid-area: aboutme;
     }
     .abt-c{
-        width: 935.002px;
-        min-width: 935.002px;
-        height: 509.99px;
-        min-height: 509.99px;
+        // width: 48.698vw;
+        // min-width: 48.698vw;
+        max-width: 48.698vw;
+        height: 26.562vw;
+        min-height: 26.562vw;
         border-radius: $radius;
         background-color: $neon;
-        padding: 60px 51.994px;
+        padding: 3.125vw 2.708vw;
         grid-area: skills;
         button{
-            margin-right: 14.995px;
-            margin-bottom: 14.995px;
+            margin-right: 0.781vw;
+            margin-bottom: 0.781vw;
         }
     }
 }
@@ -85,23 +85,7 @@
             "title title"
             "aboutme skills";
         h1{
-            font-size: 7.5vw;
-            line-height: 10.234vw;
-            margin-bottom: 0.703vw;
-        }
-        h2{
-            font-size: 1.875vw;
-            line-height: 1.875vw;
-            margin-bottom: 2.344vw;
-        }
-        p{
-            font-size: 1.563vw;
-            line-height: 2.5vw;
-            font-family: $Roboto;
-            margin-bottom: 2.344vw;
-            &:last-child{
-                margin-bottom: 0;
-            }
+            margin:0 0 0.703vw;
         }
         .abt-a{
             background-color: $greengrey;
@@ -154,14 +138,8 @@
             grid-area: skills;
             margin-top: 0;
             button{
-                border:0.078vw solid $black;
-                background-color: transparent;
-                border-radius: $radius-m;
-                font-size: 1.875vw;
-                line-height: 2.578vw;
-                padding: 0.313vw 1.719vw;
-                margin-right: 0.781vw;
-                margin-bottom: 0.781vw;
+                margin-right: 9.997px;
+                margin-bottom: 9.997px;
             }
         }
     }
@@ -174,26 +152,9 @@
             "title title"
             "aboutme skills";
         h1{
-            font-size: 6.25vw;
-            line-height: 8.496vw;
-            margin-bottom: 2.344vw;
-        }
-        h2{
-            font-size: 3.125vw;
-            line-height: 4.297vw;
-            margin-bottom: 2.344vw;
-        }
-        p{
-            font-size: 1.855vw;
-            line-height: 2.734vw;
-            font-family: $Roboto;
-            margin-bottom: 2.93vw;
-            &:last-child{
-                margin-bottom: 0;
-            }
+            margin-bottom: 0;
         }
         .abt-a{
-            background-color: $greengrey;
             border-radius: $radius-t;
             color: $white;
             display: flex;
@@ -223,9 +184,9 @@
         }
         .abt-b{
             width: 48.047vw;
-            height: 65.977vw;
+            height: 65vw;
             min-width: 48.047vw;
-            min-height: 65.977vw;
+            min-height: 65vw;
             border-radius: $radius-t;
             background-color: $black;
             color: $white;
@@ -235,21 +196,15 @@
         }
         .abt-c{
             width: 48.047vw;
-            height: 65.977vw;
+            height: 65vw;
             min-width: 48.047vw;
-            min-height: 65.977vw;
+            min-height: 65vw;
             border-radius: $radius-t;
             background-color: $neon;
             padding: 4.395vw 4.785vw;
             grid-area: skills;
             margin-top: 0;
             button{
-                border:0.098vw solid $black;
-                background-color: transparent;
-                border-radius: $radius-m;
-                font-size: 2.344vw;
-                line-height: 3.125vw;
-                padding: 0.488vw 1.465vw;
                 margin-right: 0.977vw;
                 margin-bottom: 0.977vw;
             }
@@ -265,23 +220,7 @@
             "aboutme"
             "skills";
         h1{
-            font-size: 9.662vw;
-            line-height: 11.836vw;
             margin-bottom: 2.415vw;
-        }
-        h2{
-            font-size: 4.831vw;
-            line-height: 6.522vw;
-            margin-bottom: 2.657vw;
-        }
-        p{
-            font-size: 3.865vw;
-            line-height: 5.797vw;
-            font-family: $Roboto;
-            margin-bottom: 2.174vw;
-            &:last-child{
-                margin-bottom: 0;
-            }
         }
         .abt-a{
             background-color: $greengrey;
@@ -326,8 +265,8 @@
             grid-area: aboutme;
         }
         .abt-c{
-            width: unset;
-            min-width: unset;
+            width: 100%;
+            min-width: 100%;
             height:  unset;
             min-height:  unset;
             border-radius: $radius-mc;
@@ -335,16 +274,7 @@
             padding: 7.729vw 6.763vw;
             grid-area: skills;
             margin-top: 2.415vw;
-            button{
-                border:0.215px solid $black;
-                background-color: transparent;
-                border-radius: $radius-m;
-                font-size: 3.865vw;
-                line-height: 5.797vw;
-                padding: 0.725vw 3.865vw;
-                margin-right: 2.415vw;
-                margin-bottom: 2.415vw;
-            }
+
         }
     }
 }
