--- a/src/styles/_projects.scss
+++ b/src/styles/_projects.scss
@@ -6,7 +6,7 @@
     display: grid;
     grid-template-areas: "gtn efs ecm""gtn ptf ptf";
     .pjts-c{
-        width: 31.944vw;
+        max-width: 31.944vw;
         border-radius: $radius;
         padding: 2.604vw 2.587vw 2.552vw;
     }
@@ -15,8 +15,8 @@
         color: $white;
     }
     h3{
-        margin-top: 24.998px;
-        margin-bottom: 19.008px;
+        margin-top: 1.302vw;
+        margin-bottom: 0.99vw;
     }
     .gtn{
         background-color: $purple;
@@ -45,7 +45,7 @@
         min-height: 21.875vw;
         color: $black;
         grid-area: ptf;
-        width: 65.452vw;
+        min-width: 65.452vw;
         button{
             color: $black;
             border: 0.156vw solid $black;
@@ -55,67 +55,51 @@
 
 @media screen and (max-width: 1280px) {
     .pjts{
-        margin-top: 30px;
-        --pborderw:3px;
+        margin-top: 2.344vw;
+        --pborderw:0.234vw;
         --pborders:solid;
         --pborderc: $white;
         display: grid;
         grid-template-areas: "gtn efs" "gtn ecm" "ptf ptf";
         .pjts-c{
-            width: 615px;
+            max-width: 48.047vw;
             border-radius: $radius;
-            padding: 55px 50px;
+            padding: 4.141vw 3.516vw;
         }
         button{
-            font-size: 24px;
-            line-height: 24px;
-            padding: 12px 31px;
+            font-size: 1.875vw;
+            line-height: 1.875vw;
+            padding: 0.938vw 2.422vw;
             background: transparent;
-            border: 3px solid $white;
+            border: 0.234vw solid $white;
             border-radius: $radius;
             color: $white;
         }
-        .link-c{            
-            .link{
-                width: 47px;
-                height: 47px;
-            }
-        }
-        h1{
-            font-size: 40px;
-            line-height: 54px;
-            margin-top: 20px;
-            margin-bottom: 15px;
-        }
-        p{
-            font-size: 20px;
-            line-height: 32px;
-            margin-bottom: 20px;
-            &:last-child{
-                margin-bottom: 0;
-            }
+        h3{
+            margin-top: 1.563vw;
+            margin-bottom: 1.172vw;
         }
         .gtn{
-            min-height: 694px;
-            margin-right: 30px;
-            margin-bottom: 30px;
+            min-height: 54.219vw;
+            margin-right: 2.344vw;
+            margin-bottom: 2.344vw;
         }
         .efs{
-            min-height: 332px;
-            margin-bottom: 30px;
-            margin-right: 30px;
+            min-height: 25.938vw;
+            margin-bottom: 2.344vw;
+            margin-right: 0vw;
         }
         .ecm{
-            min-height: 332px;
-            margin-bottom: 30px;
+            min-height: 25.938vw;
+            margin-bottom: 2.344vw;
         }
         .ptf{
             background-color: #DADCF1;
-            width: 1260px;
-            min-height: 332px;
+            max-width: 98.438vw;
+            min-height: 25.938vw;
             button{
                 color: $black;
-                border: 3px solid $black;
+                border: 0.234vw solid $black;
             }
         }
     }
@@ -123,76 +107,51 @@
 
 @media screen and (max-width: 1024px) {
     .pjts{
-        margin-top: 20px;
-        --pborderw:3px;
+        margin-top: 1.953vw;
+        --pborderw:0.293vw;
         --pborders:solid;
         --pborderc: $white;
         display: grid;
         grid-template-areas: "gtn efs" "gtn ecm" "ptf ptf";
         .pjts-c{
-            width: 492px;
+            width: 48.047vw;
             border-radius: $radius-t;
-            padding: 55px 50px;
-        }
-        button{
-            font-size: 24px;
-            line-height: 24px;
-            padding: 12px 31px;
-            background: transparent;
-            border: 3px solid $white;
-            border-radius: $radius-t;
-            color: $white;
-        }
-        .link-c{            
-            .link{
-                width: 47px;
-                height: 47px;
-            }
+            padding: 5.371vw 4.883vw;
         }
         h1{
-            font-size: 36px;
-            line-height: 49px;
-            margin-top: 20px;
-            margin-bottom: 15px;
-        }
-        p{
-            font-size: 20px;
-            line-height: 32px;
-            margin-bottom: 20px;
-            &:last-child{
-                margin-bottom: 0;
-            }
+            margin-top: 1.953vw;
+            margin-bottom: 1.465vw;
         }
         .gtn{
-            min-height: 764px;
-            margin-right: 20px;
-            margin-bottom: 20px;
+            min-height: 74.609vw;
+            margin-right: 1.953vw;
+            margin-bottom: 1.953vw;
         }
         .efs{
-            min-height: 372px;
-            margin-bottom: 20px;
-            margin-right: 0px;
+            min-height: 36.328vw;
+            margin-bottom: 1.953vw;
+            margin-right: 0vw;
         }
         .ecm{
-            min-height: 372px;
-            margin-bottom: 20px;
+            min-height: 36.328vw;
+            margin-bottom: 1.953vw;
         }
         .ptf{
             background-color: #DADCF1;
-            width: 1004px;
-            min-height: 382px;
+            width: 98.047vw;
+            min-height: 37.305vw;
             button{
                 color: $black;
-                border: 3px solid $black;
+                border: 0.293vw solid $black;
             }
         }
     }
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width:480px) {
     .pjts{
-        margin-top: 20px;
-        --pborderw:3px;
+        margin-top: 4.831vw;
+        --pborderw:0.725vw;
         --pborders:solid;
         --pborderc: $white;
         display: grid;
@@ -200,50 +159,34 @@
         .pjts-c{
             width: unset;
             border-radius: $radius-mc;
-            padding: 40px 28px;
+            padding: 9.662vw 6.763vw;
         }
         button{
-            font-size: 20px;
-            line-height: 27px;
-            padding: 5px 20px;
+            font-size: 4.831vw;
+            line-height: 6.522vw;
+            padding: 1.208vw 4.831vw;
             background: transparent;
-            border: 3px solid $white;
+            border: 0.725vw solid $white;
             border-radius: $radius-m;
             color: $white;
         }
-        .link-c{            
-            .link{
-                width: 37px;
-                height: 37px;
-            }
-        }
         h1{
-            font-size: 32px;
-            line-height: 44px;
-            margin-top: 20px;
-            margin-bottom: 15px;
-        }
-        p{
-            font-size: 16px;
-            line-height: 24px;
-            margin-bottom: 15px;
-            &:last-child{
-                margin-bottom: 0;
-            }
+            margin-top: 4.831vw;
+            margin-bottom: 3.623vw;
         }
         .gtn{
             min-height: unset;
-            margin-right: 0px;
-            margin-bottom: 20px;
+            margin-right: 0vw;
+            margin-bottom: 4.831vw;
         }
         .efs{
             min-height: unset;
-            margin-bottom: 20px;
-            margin-right: 0px;
+            margin-bottom: 4.831vw;
+            margin-right: 0vw;
         }
         .ecm{
             min-height: unset;
-            margin-bottom: 20px;
+            margin-bottom: 4.831vw;
         }
         .ptf{
             background-color: #DADCF1;
@@ -251,7 +194,7 @@
             min-height: unset;
             button{
                 color: $black;
-                border: 3px solid $black;
+                border: 0.725vw solid $black;
             }
         }
     }
