--- a/src/styles/_root.scss
+++ b/src/styles/_root.scss
@@ -35,7 +35,6 @@ $transition: all 0.25s cubic-bezier(0.645,0.045,0.355,1);
 $transitiontf: all 0.5s cubic-bezier(0.47,0.01,0.4,0.99);
 
 body{
-    // color: $white;
     font-family:$Opensans;
     padding: 0.521vw;
     margin: 0;
@@ -43,47 +42,54 @@ body{
 }
 
 h1{
-    font-size: 128px;
-    line-height: 128px;
+    font-size: 6.667vw;
+    line-height: 6.667vw;
 }
 h2{
-    font-size: 40px;
-    line-height: 54px;
-    margin-bottom: 30px;
+    font-size: 2.083vw;
+    line-height: 2.813vw;
+    margin-bottom: 1.563vw;
 }
 h3{
-    font-size: 40px;
-    line-height: 64px;
+    font-size: 2.083vw;
+    line-height: 3.333vw;
+}
+h4{
+    font-size: 1.667vw;
+    line-height: 2.292vw;
+    margin: 0;
 }
 p{
-    font-size: 24px;
-    line-height: 40px;
+    font-size: 1.25vw;
+    line-height: 2.083vw;
     font-family: $Roboto;
-    margin-bottom: 20px;
+    margin-bottom: 1.042vw;
     &:last-child{
         margin-bottom: 0;
     }
 }
 .btns{
-    font-size: 32px;
-    line-height: 32px;
-    padding: 8.5px 33px;
+    font-size: 1.667vw;
+    line-height: 1.667vw;
+    padding: 0.443vw 1.719vw;
     background: none;
     border-radius: $radius;
-    border:1px solid $black;
+    border:0.052vw solid $black;
+    margin-right: 0.781vw;
+    margin-bottom: 0.781vw;
 }
 .btntl{
-    font-size: 24px;
-    line-height: 32px;
-    padding: 8.5px 33px;
+    font-size: 1.25vw;
+    line-height: 1.667vw;
+    padding: 0.234vw 1.719vw;
     background: none;
     border-radius: $radius;
-    border:3px solid $black;
+    border:0.156vw solid $black;
 }
 .ls-c{
     .ls{
-        width: 47px;
-        height: 47px;
+        width: 2.448vw;
+        height: 2.448vw;
     }
 }
 
@@ -91,9 +97,9 @@ ul{
     margin: 0;
     padding: 0;
     li{
-        font-size: 24px;
-        line-height: 33px;
-        margin-bottom: 20px;
+        font-size: 1.25vw;
+        line-height: 1.719vw;
+        margin-bottom: 1.042vw;
         &:last-child{
             margin-bottom: 0;
         }
@@ -106,7 +112,73 @@ ul{
 
 @media screen and (max-width: 1280px) {
     body{
-        padding: 0.781vw;
+        padding: 9.997px;
+    }
+    h1{
+        font-size: 7.5vw;
+        line-height: 10.234vw;
+    }
+    h2{
+        font-size: 3.125vw;
+        line-height: 4.22vw;
+        margin-bottom: 1.563vw;
+    }
+    h3{
+        font-size: 3.125vw;
+        line-height: 4.219vw;
+    }
+    h4{
+        font-size: 2.5vw;
+        line-height: 3.438vw;
+        margin: 0;
+    }
+    p{
+        font-size: 1.563vw;
+        line-height: 2.5vw;
+        font-family: $Roboto;
+        margin-bottom: 1.172vw;
+        &:last-child{
+            margin-bottom: 0;
+        }
+    }
+    .btns{
+        border:0.078vw solid $black;
+        border-radius: $radius-m;
+        font-size: 1.875vw;
+        line-height: 2.578vw;
+        padding: 0.313vw 1.719vw;
+        margin-right: 1.172vw;
+        margin-bottom: 1.172vw;
+    }
+    .btntl{
+        font-size: 1.875vw;
+        line-height: 2.5vw;
+        padding: 0.351vw 2.579vw;
+        background: none;
+        border-radius: $radius;
+        border:0.234vw solid $black;
+    }
+    .ls-c{
+        .ls{
+            width: 3.672vw;
+            height: 3.672vw;
+        }
+    }
+    
+    ul{
+        margin: 0;
+        padding: 0;
+        li{
+            font-size: 1.563vw;
+            line-height: 2.5vw;
+            margin-bottom: 1.563vw;
+            &:last-child{
+                margin-bottom: 0;
+            }
+            &::marker{
+                content: '';
+            }
+        }
     }
 
 }
@@ -114,14 +186,147 @@ ul{
 
 @media screen and (max-width: 1024px) {
     body{
-        padding: 0.976vw;
+        padding: 9.994px;
+    }
+    h1{
+        font-size: 9.375vw;
+        line-height: 12.793vw;
+    }
+    h2{
+        font-size: 3.906vw;
+        line-height: 5.274vw;
+        margin-bottom: 1.953vw;
+    }
+    h3{
+        font-size: 3.125vw;
+        line-height: 4.297vw;
+    }
+    h4{
+        font-size: 2.344vw;
+        line-height: 3.906vw;
+        margin: 0;
+    }
+    p{
+        font-size: 1.953vw;
+        line-height: 3.125vw;
+        font-family: $Roboto;
+        margin-bottom: 1.465vw;
+        &:last-child{
+            margin-bottom: 0;
+        }
+    }
+    .btns{
+        border:0.097vw solid $black;
+        border-radius: $radius-m;
+        font-size: 2.344vw;
+        line-height: 3.222vw;
+        padding: 0.391vw 2.149vw;
+        margin-right: 1.465vw;
+        margin-bottom: 1.465vw;
+    }
+    .btntl{
+        font-size: 2.344vw;
+        line-height: 3.126vw;
+        padding: 0.439vw 3.223vw;
+        background: none;
+        border-radius: $radius;
+        border:0.292vw solid $black;
+    }
+    .ls-c{
+        .ls{
+            width: 4.59vw;
+            height: 4.59vw;
+        }
+    }
+    
+    ul{
+        margin: 0;
+        padding: 0;
+        li{
+            font-size: 1.953vw;
+            line-height: 3.125vw;
+            margin-bottom: 1.66vw;
+            &:last-child{
+                margin-bottom: 0;
+            }
+            &::marker{
+                content: '';
+            }
+        }
     }
 
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 460px) {
     body{
-        padding: 2.415vw;
+        padding: 9.998px;
     }
+    h1{
+        font-size: 8.696vw;
+        line-height: 11.836vw;
+    }
+    h2{
+        font-size: 4.831vw;
+        line-height: 6.522vw;
+        margin-bottom: 2.415vw;
+    }
+    h3{
+        font-size: 6.039vw;
+        line-height: 8.213vw;
+    }
+    h4{
+        font-size: 4.831vw;
+        line-height: 6.522vw;
+        margin: 0;
+    }
+    p{
+        font-size: 3.865vw;
+        line-height: 5.797vw;
+        font-family: $Roboto;
+        margin-bottom: 2.415vw;
+        &:last-child{
+            margin-bottom: 0;
+        }
+    }
+    .btns{
+        border:0.241vw solid $black;
+        border-radius: $radius-m;
+        font-size: 3.865vw;
+        line-height: 5.797vw;
+        padding: 0.725vw 3.865vw;
+        margin-right: 2.415vw;
+        margin-bottom: 2.415vw;
+    }
+    .btntl{
+        font-size: 4.831vw;
+        line-height: 6.522vw;
+        padding: 1.208vw 7.246vw;
+        background: none;
+        border-radius: $radius-m;
+        border:0.723vw solid $black;
+    }
+    .ls-c{
+        .ls{
+            width: 8.938vw;
+            height: 8.938vw;
+        }
+    }
+    
+    ul{
+        margin: 0;
+        padding: 0;
+        li{
+            font-size: 3.865vw;
+            line-height: 5.797vw;
+            margin-bottom: 2.415vw;
+            &:last-child{
+                margin-bottom: 0;
+            }
+            &::marker{
+                content: '';
+            }
+        }
+    }
+
 
 }
